--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -3,5 +3,7 @@ $baseline: 4px;
 $colors: (
     primary: #02B589,
     secondary: #F0F0F0,
-    default: #FFFFFF
+    default: #FFFFFF,
+    black: black,
+    gray: rgb(165, 165, 165)
 );
