--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -5,5 +5,6 @@ $colors: (
     secondary: #F0F0F0,
     default: #FFFFFF,
     black: black,
-    gray: rgb(165, 165, 165)
+    gray: rgb(165, 165, 165),
+    red: rgb(255, 0, 0)
 );
