added everything useful

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -28,6 +28,10 @@
     }
 }
 
+.cursor-pointer {
+    cursor: pointer;
+}
+
 @for $i from 0 through 10 {
     @for $o from 0 through 10 {
         .h-#{$i}-#{$o} {
