--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -126,6 +126,11 @@ body {
     cursor: pointer;
 }
 
+.vhw {
+    width: 100vw;
+    height: 100vh;
+}
+
 // ЭНЭ CSS ЯМАР УЧИРТАЙГ САЙН СУДЛАХ
 * {
     box-sizing: border-box;
